--- a/Rommulbad/Rommulbad.fsproj
+++ b/Rommulbad/Rommulbad.fsproj
@@ -6,7 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Web.fs" />
+	  <Compile Include="ResponseHandler.fs" />
+
+	  <Compile Include="SessionHandler.fs" />
+    <Compile Include="CandidateHandler.fs" />
+	  <Compile Include="Routes.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
