--- a/Service/Service.fsproj
+++ b/Service/Service.fsproj
@@ -7,6 +7,7 @@
 	  <Compile Include="Error.fs" />
 	  <Compile Include="SessionService.fs" />
 	  <Compile Include="CandidateService.fs" />
+	  <Compile Include="GuardianService.fs" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\Database\Database.fsproj" />
