--- a/Rommulbad/Rommulbad.fsproj
+++ b/Rommulbad/Rommulbad.fsproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <Compile Include="ResponseHandler.fs" />
+	  <Compile Include="SessionHandler.fs" />
+      <Compile Include="CandidateHandler.fs" />
+	  <Compile Include="GuardianHandler.fs" />
+	  <Compile Include="Routes.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
@@ -17,8 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Database\Database.fsproj" />
+	<ProjectReference Include="..\Models\Models.fsproj" />
 	<ProjectReference Include="..\Service\Service.fsproj" />
-	<ProjectReference Include="..\Handlers\Handlers.fsproj" />
   </ItemGroup>
 
 </Project>
