--- a/Rommulbad/Rommulbad.fsproj
+++ b/Rommulbad/Rommulbad.fsproj
@@ -6,11 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-	  <Compile Include="ResponseHandler.fs" />
-	  <Compile Include="SessionHandler.fs" />
-      <Compile Include="CandidateHandler.fs" />
-	  <Compile Include="GuardianHandler.fs" />
-	  <Compile Include="Routes.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
@@ -25,6 +20,7 @@
     <ProjectReference Include="..\Database\Database.fsproj" />
 	<ProjectReference Include="..\Models\Models.fsproj" />
 	<ProjectReference Include="..\Service\Service.fsproj" />
+	<ProjectReference Include="..\Handler\Handler.fsproj" />
   </ItemGroup>
 
 </Project>
