--- a/Rommulbad/Rommulbad.fsproj
+++ b/Rommulbad/Rommulbad.fsproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\Database\Database.fsproj" />
 	<ProjectReference Include="..\Models\Models.fsproj" />
 	<ProjectReference Include="..\Service\Service.fsproj" />
+	<ProjectReference Include="..\Application\Application.fsproj" />
 	<ProjectReference Include="..\Handler\Handler.fsproj" />
   </ItemGroup>
 
