added some files

--- a/Database/Database.fsproj
+++ b/Database/Database.fsproj
@@ -7,8 +7,7 @@
 
 	<ItemGroup>
 		<Compile Include="InstoreDatabase.fs" />
-		<Compile Include="IStore.fs" />
-		<Compile Include="SeedStore.fs" />
+		<Compile Include="MockData.fs" />
 	</ItemGroup>
 	
 	<ItemGroup>
