--- a/Models/Models.fsproj
+++ b/Models/Models.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Util.fs" />
     <Compile Include="Diploma.fs" />
     <Compile Include="GuardianId.fs" />
     <Compile Include="Name.fs" />
